# Grim

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.py  pyproject.toml
.cache/clangd/index/: card.c.8A5A904E2699519F.idx  card.h.F844B18CCB20E843.idx  display.c.49A965D72013E512.idx  display.h.EAFB6ACF316602E8.idx  game_state.c.1BE31234B1653BB3.idx  game_state.h.8B2EC506B9430E29.idx  input.c.50605A0CB6763A87.idx  input.h.C5208C1924F2B4BA.idx  log.h.B67969A5848A379A.idx  main.c.435636AB0BDB52C0.idx  ncurses_utils.c.4649FBE9F14B5AE4.idx  ncurses_utils.h.46CD40F2AA96FA32.idx
files/: oop.canvas  shema 2025-04-21 18.14.12.excalidraw.md
include/: card.h  display.h  game_state.h  input.h  log.h  ncurses_utils.h
logger/: logger  main.c
src/: card.c  display.c  game.rs  game_state.c  input.c  log.c  main.c  main.py  main.rs  ncurses_utils.c  screen.py
src/game/: cards.rs  phases.rs  player.rs
src/game/player/: card_collection.rs  comp_deck.rs  player_deck.rs
